# pkg/docs/swagger.yaml
@@ -112,8 +112,41 @@ definitions:
         example: name
         type: string
     type: object
+  swagdto.PagingResult:
+    properties:
+      count:
+        example: 20
+        type: integer
+      limit:
+        example: 10
+        type: integer
+      nextPage:
+        example: 2
+        type: integer
+      page:
+        example: 1
+        type: integer
+      prevPage:
+        example: 0
+        type: integer
+      totalPage:
+        example: 2
+        type: integer
+    type: object
   swagdto.Response:
     properties:
+      data: {}
+      requestId:
+        example: 3b6272b9-1ef1-45e0
+        type: string
+      status:
+        example: 200
+        type: integer
+    type: object
+  swagdto.ResponseWithPage:
+    properties:
+      _pagination:
+        $ref: '#/definitions/swagdto.PagingResult'
       data: {}
       requestId:
         example: 3b6272b9-1ef1-45e0
@@ -134,6 +167,35 @@ definitions:
     properties:
       auth:
         $ref: '#/definitions/swagger.AuthResponse'
+    type: object
+  swagger.AuthUserSampleData:
+    properties:
+      user:
+        $ref: '#/definitions/swagger.UserInfo'
+    type: object
+  swagger.CreateUserFrom:
+    properties:
+      email:
+        description: 'Required: true'
+        example: user@mail.com
+        type: string
+      password:
+        description: 'Required: true'
+        example: password1234
+        type: string
+    type: object
+  swagger.ErrCreateSampleData:
+    properties:
+      code:
+        example: "422"
+        type: string
+      details:
+        items:
+          $ref: '#/definitions/swagger.ErrorDetailCreate'
+        type: array
+      message:
+        example: invalid data see details
+        type: string
     type: object
   swagger.ErrLoginSampleData:
     properties:
@@ -174,6 +236,15 @@ definitions:
         example: invalid data see details
         type: string
     type: object
+  swagger.ErrorDetailCreate:
+    properties:
+      message:
+        example: email field is required
+        type: string
+      target:
+        example: email
+        type: string
+    type: object
   swagger.ErrorDetailLogin:
     properties:
       message:
@@ -212,6 +283,13 @@ definitions:
         example: password1234
         type: string
     type: object
+  swagger.RefreshForm:
+    properties:
+      refresh_token:
+        type: string
+    required:
+    - refresh_token
+    type: object
   swagger.RegisterForm:
     properties:
       email:
@@ -230,7 +308,30 @@ definitions:
       password_old:
         type: string
     type: object
+  swagger.UpdateUserPasswordForm:
+    properties:
+      password_new:
+        description: 'Required: true'
+        example: 1234password
+        type: string
+      password_old:
+        description: 'Required: true'
+        example: password1234
+        type: string
+    type: object
   swagger.UserInfo:
+    properties:
+      email:
+        example: user@mail.com
+        type: string
+      id:
+        example: bfbc2a69-9825-4a0e-a8d6-ffb985dc719c
+        type: string
+      role:
+        example: user
+        type: string
+    type: object
+  swagger.UserRepsonse:
     properties:
       email:
         example: user@mail.com
@@ -245,7 +346,14 @@ definitions:
   swagger.UserSampleData:
     properties:
       user:
-        $ref: '#/definitions/swagger.UserInfo'
+        $ref: '#/definitions/swagger.UserRepsonse'
+    type: object
+  swagger.UserSampleListData:
+    properties:
+      users:
+        items:
+          $ref: '#/definitions/swagger.UserRepsonse'
+        type: array
     type: object
 info:
   contact: {}
@@ -313,7 +421,7 @@ paths:
             - $ref: '#/definitions/swagdto.Response'
             - properties:
                 data:
-                  $ref: '#/definitions/swagger.UserSampleData'
+                  $ref: '#/definitions/swagger.AuthUserSampleData'
               type: object
         "401":
           description: Unauthorized
@@ -324,6 +432,50 @@ paths:
           schema:
             $ref: '#/definitions/swagdto.Error500'
       summary: Get a user profile
+      tags:
+      - Auth
+  /auth/refresh:
+    post:
+      consumes:
+      - application/json
+      description: Generate new access and refresh token from refresh token
+      parameters:
+      - description: Refresh Token Data
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/swagger.RefreshForm'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/swagdto.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/swagger.AuthSampleData'
+              type: object
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/swagdto.Error401'
+        "422":
+          description: Unprocessable Entity
+          schema:
+            allOf:
+            - $ref: '#/definitions/swagdto.Error422'
+            - properties:
+                error:
+                  $ref: '#/definitions/swagger.ErrLoginSampleData'
+              type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/swagdto.Error500'
+      summary: Refresh Token
       tags:
       - Auth
   /auth/register:
@@ -359,13 +511,193 @@ paths:
       summary: Register a new user
       tags:
       - Auth
-  /users/{id}:
-    patch:
-      description: Update a user password
+  /auth/revoke:
+    post:
+      consumes:
+      - application/json
+      description: Remove token id in redis
       parameters:
-      - description: Bearer
-        in: header
-        name: Authorization
+      - description: Refresh Token Data
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/swagger.RefreshForm'
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: ""
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/swagdto.Error401'
+        "422":
+          description: Unprocessable Entity
+          schema:
+            allOf:
+            - $ref: '#/definitions/swagdto.Error422'
+            - properties:
+                error:
+                  $ref: '#/definitions/swagger.ErrLoginSampleData'
+              type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/swagdto.Error500'
+      summary: Revoke Token
+      tags:
+      - Auth
+  /users:
+    get:
+      consumes:
+      - application/json
+      description: You can filter all existing users by listing them.
+      parameters:
+      - description: Go to a specific page number. Start with 1
+        in: query
+        name: page
+        type: integer
+      - description: Page size for the data
+        in: query
+        name: limit
+        type: integer
+      - description: 'Page order. Eg: text desc,createdAt desc'
+        in: query
+        name: order
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/swagdto.ResponseWithPage'
+            - properties:
+                data:
+                  $ref: '#/definitions/swagger.UserSampleListData'
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/swagdto.Error400'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/swagdto.Error500'
+      summary: List all existing users
+      tags:
+      - User
+    post:
+      consumes:
+      - application/json
+      description: Add a new user
+      parameters:
+      - description: User Data
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/swagger.CreateUserFrom'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            allOf:
+            - $ref: '#/definitions/swagdto.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/swagger.UserSampleData'
+              type: object
+        "422":
+          description: Unprocessable Entity
+          schema:
+            allOf:
+            - $ref: '#/definitions/swagdto.Error422'
+            - properties:
+                error:
+                  $ref: '#/definitions/swagger.ErrCreateSampleData'
+              type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/swagdto.Error500'
+      summary: Add a new user
+      tags:
+      - User
+  /users/{id}:
+    delete:
+      description: Delete a specific user by id
+      parameters:
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: ""
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/swagdto.Error400'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/swagdto.Error404'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/swagdto.Error500'
+      summary: Delete a user
+      tags:
+      - User
+    get:
+      description: Get a specific user by id
+      parameters:
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/swagdto.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/swagger.UserSampleData'
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/swagdto.Error400'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/swagdto.Error404'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/swagdto.Error500'
+      summary: Get a user
+      tags:
+      - User
+    patch:
+      description: Update a specific user password by id
+      parameters:
+      - description: User ID
+        in: path
+        name: id
         required: true
         type: string
       - description: User Password
@@ -373,7 +705,7 @@ paths:
         name: user
         required: true
         schema:
-          $ref: '#/definitions/swagger.UpdateProfileForm'
+          $ref: '#/definitions/swagger.UpdateUserPasswordForm'
       produces:
       - application/json
       responses:
