# pkg/module/auth/core/dto/auth.go
@@ -1,6 +1,9 @@
 package dto
 
-import "time"
+import (
+	"encoding/json"
+	"time"
+)
 
 type RegisterForm struct {
 	Email    string `json:"email" validate:"required"`
@@ -18,14 +21,31 @@ type UserInfo struct {
 	Role  string `json:"role"`
 }
 
-type TokenInfo struct {
-	Token  string    `json:"token"`
-	Expire time.Time `json:"expire"`
+func (u *UserInfo) ToPayloadMap() map[string]interface{} {
+	// Convert to a json string
+
+	data, err := json.Marshal(u)
+
+	if err != nil {
+		return nil
+	}
+	payload := map[string]interface{}{}
+	// Convert to a map
+	err = json.Unmarshal(data, &payload)
+
+	if err != nil {
+		return nil
+	}
+
+	return payload
 }
 
 type AuthResponse struct {
-	User  UserInfo `json:"user"`
-	Token string   `json:"token"`
+	User                  *UserInfo `json:"user,omitempty"`
+	AccessToken           string    `json:"access_token"`
+	AccessTokenExpiresAt  time.Time `json:"access_token_expires"`
+	RefreshToken          string    `json:"refresh_token"`
+	RefreshTokenExpiresAt time.Time `json:"refresh_token_expires"`
 }
 
 type UpdateProfileForm struct {
