# pkg/module/auth/handler/auth.go
@@ -13,6 +13,8 @@ type AuthHandler interface {
 	Login(c common.HContext) error
 	Profile(c common.HContext) error
 	UpdateProfile(c common.HContext) error
+	RefreshToken(c common.HContext) error
+	RevokeToken(c common.HContext) error
 }
 
 type authHandler struct {
@@ -83,7 +85,7 @@ func (h authHandler) Login(c common.HContext) error {
 // @Param Authorization header string true "Bearer"
 // @Failure 401 {object} swagdto.Error401
 // @Failure 500 {object} swagdto.Error500
-// @Success 200 {object} swagdto.Response{data=swagger.UserSampleData}
+// @Success 200 {object} swagdto.Response{data=swagger.AuthUserSampleData}
 // @Router /auth/profile [get]
 func (h authHandler) Profile(c common.HContext) error {
 	u := c.Locals("user").(jwt.MapClaims)
@@ -108,7 +110,7 @@ func (h authHandler) Profile(c common.HContext) error {
 // @Failure 404 {object} swagdto.Error404
 // @Failure 422 {object} swagdto.Error422{error=swagger.ErrUpdateSampleData}
 // @Failure 500 {object} swagdto.Error500
-// @Success 200 {object} swagdto.Response{data=swagger.UserSampleData}
+// @Success 200 {object} swagdto.Response{data=swagger.AuthUserSampleData}
 // @Router /users/{id} [patch]
 func (h authHandler) UpdateProfile(c common.HContext) error {
 	u := c.Locals("user").(jwt.MapClaims)
@@ -127,4 +129,58 @@ func (h authHandler) UpdateProfile(c common.HContext) error {
 	}
 
 	return common.ResponseOk(c, "user", user)
+}
+
+// @Summary Refresh Token
+// @Description Generate new access and refresh token from refresh token
+// @Tags Auth
+// @Accept  json
+// @Produce  json
+// @Param user body swagger.RefreshForm true "Refresh Token Data"
+// @Failure 401 {object} swagdto.Error401
+// @Failure 422 {object} swagdto.Error422{error=swagger.ErrLoginSampleData}
+// @Failure 500 {object} swagdto.Error500
+// @Success 200 {object} swagdto.Response{data=swagger.AuthSampleData}
+// @Router /auth/refresh [post]
+func (h authHandler) RefreshToken(c common.HContext) error {
+	// แปลง JSON เป็น struct
+	form := new(dto.RefreshForm)
+	if err := c.BodyParser(form); err != nil {
+		return common.ResponseError(c, common.ErrBodyParser)
+	}
+	// ส่งต่อไปให้ service ทำงาน
+	auth, err := h.serv.RefreshToken(*form, c.RequestId())
+	if err != nil {
+		// error จะถูกจัดการมาจาก service แล้ว
+		return common.ResponseError(c, err)
+	}
+
+	return common.ResponseOk(c, "auth", auth)
+}
+
+// @Summary Revoke Token
+// @Description Remove token id in redis
+// @Tags Auth
+// @Accept  json
+// @Produce  json
+// @Param user body swagger.RefreshForm true "Refresh Token Data"
+// @Failure 401 {object} swagdto.Error401
+// @Failure 422 {object} swagdto.Error422{error=swagger.ErrLoginSampleData}
+// @Failure 500 {object} swagdto.Error500
+// @Success 204
+// @Router /auth/revoke [post]
+func (h authHandler) RevokeToken(c common.HContext) error {
+	// แปลง JSON เป็น struct
+	form := new(dto.RefreshForm)
+	if err := c.BodyParser(form); err != nil {
+		return common.ResponseError(c, common.ErrBodyParser)
+	}
+	// ส่งต่อไปให้ service ทำงาน
+	err := h.serv.RevokeToken(*form, c.RequestId())
+	if err != nil {
+		// error จะถูกจัดการมาจาก service แล้ว
+		return common.ResponseError(c, err)
+	}
+
+	return common.ResponseNoContent(c)
 }
